--- a/style.css
+++ b/style.css
@@ -21,6 +21,16 @@ input {
 	font-size: 15px;
 }
 
+#navbar {
+  float: right;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  background-color: #111;
+}
+
 select {
 	margin: 3%;
 	height: 30px;
