--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ input {
 	font-size: 15px;
 }
 
+.linkImage {
+	margin: 10px;
+	height: 40px;
+	width: 40px;
+}
+
 #navbar {
 	display: inline-block;
 	background-color: #334c75;
