add navbar and footer property

--- a/style.css
+++ b/style.css
@@ -1,27 +1,22 @@
 a:hover {
   color: #ffe138;
 }
+
 body {
 	background-color: #d3e4ff;
 	text-align: center;
 	margin: 5%;
 }
 
-fieldset {
-	display: inline-block;
-	margin: 3%;
-	float: center;
-	width: 250px;
-	background-color: #eeefde;
-	font-size: 20px;
-}
-
-input {
-	background-color: #eeefde;
-	margin: 1%;
-	border-left: 10px;
-	height: 20px;
-	font-size: 15px;
+footer {
+	background-color: #969696;
+	position:fixed !important;
+	position: absolute;
+	padding: 10px;
+	width: 100%;
+	bottom: 0;
+	right:0;
+	left:0;
 }
 
 .linkImage {
@@ -34,6 +29,11 @@ input {
 	display: inline-block;
 	background-color: #334c75;
 	width: 100%;
+	position:fixed !important;
+	position:absolute;
+	top:0;
+	right:0;
+	left:0;
 }
 
 .navItem {
@@ -44,24 +44,6 @@ input {
 
 }
 
-select {
-	margin: 3%;
-	height: 30px;
-	width: 90px;
-	font-size: 15px;
-	background-color: #eeefde;
-}
-
-#submit {
-	margin: 5%;
-	background-color: #81d39c;
-	height: 35px;
-	width: 20%;
-	border-radius: 20px;
-	font-size: 150%;
-	color: #2e543a;
-}
-
-textarea {
-	background-color: #eeefde;
+#welcome-section {
+	height:100vh;
 }
