--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
 	margin: 5%;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: grey;
+  }
+}
+
 footer {
 	background-color: #969696;
 	position:fixed !important;
